--- a/src/scss/partials/_core.scss
+++ b/src/scss/partials/_core.scss
@@ -62,16 +62,16 @@
 
     .title {
         cursor: default;
-        display: block;
+        display: inline-block;
         height: $tree-node-height;
         line-height: $tree-node-height;
         overflow: hidden;
-        padding-left: 42px;
         position: relative;
         text-overflow: ellipsis;
         vertical-align: middle;
         white-space: nowrap;
         z-index: 1;
+        padding-left: 5px;
 
         &.load-more {
             color: $tree-link-color;
